# gpudm

./: CMakeLists.txt  LICENSE  README  README.md  configfile.xml.in
include/: calibration.h  gpudm.h  hyperspectral.h  inv.h  melanin.h  misc.h  readimage.h  wlenhelper.h
libchromophoreconfig/: CMakeLists.txt  absorption_props.cpp  absorption_props.h  chromophores.cpp  chromophores.h  parseconfig.cpp  parseconfig.h
src/: base.cu  gpudm.cu  hyperspectral.cpp  inv.cu  main.cpp  melanin.cpp  misc.cu  readimage.cpp  sca.cu  wlenhelper.cu
